testsuite/tests/parser/should_fail/pfail050.alan
utf8_chars() : proc
{
(* Ωστόσω δεν υπάρχει υποστήριξη για ελληνικά
 * μέσα σε chars (αφού πρέπει να καταλαμβάνουν
 * μονάχα 1 byte
 *)
  writeString("Ηλίας\ν");
  writeByte('φ');
}
